--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,1 +1,16 @@
 /** @format */
+.actions {
+	opacity: 0;
+}
+
+tr:hover .actions {
+	opacity: 1;
+}
+
+tbody td a {
+	color: #222;
+
+	&:hover {
+		color: #222;
+	}
+}
